--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://raw.staticdn.net/hanlinniao/hanlinniao.github.io/master/images/%E5%8C%97%E6%B4%8B%E5%9B%AD%E6%8E%A8%E5%B9%BF_2022%E5%9B%BD%E5%BA%86_banner.jpg" alt="北洋园PT" title="北洋园PT"></a>
 <div class="search-container">
   <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
     height: 35px;
@@ -102,3 +103,4 @@ layout: default
 		User:<span id="busuanzi_value_site_uv" style="font-family:Consolas;color:Silver;font-size:12px;"></span>
 	</span>
 </div>
+<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://raw.staticdn.net/hanlinniao/hanlinniao.github.io/master/images/%E5%8C%97%E6%B4%8B%E5%9B%AD%E6%8E%A8%E5%B9%BF_2022%E5%9B%BD%E5%BA%86_banner.jpg" alt="北洋园PT" title="北洋园PT"></a>
