--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://lc-gluttony.s3.amazonaws.com/mOPjCqSBCs4Z/e9z8hgF1mhoXAxypQF6QjDCJldzEzCHy/%E4%B8%AD%E7%A7%8B%E5%9B%BD%E5%BA%86banner.png" alt="北洋园PT" title="北洋园PT"></a>
+<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://lc-gluttony.s3.amazonaws.com/mOPjCqSBCs4Z/KbiFdbvkiPhV9a1N810veykpAGL7sqa7/%E5%85%83%E6%97%A6banner.png" alt="北洋园PT" title="北洋园PT"></a>
 <div class="search-container">
   <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
     height: 35px;
@@ -125,4 +125,4 @@ layout: default
 		User:<span id="busuanzi_value_site_uv" style="font-family:Consolas;color:Silver;font-size:12px;"></span>
 	</span>
 </div>
-<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://lc-gluttony.s3.amazonaws.com/mOPjCqSBCs4Z/e9z8hgF1mhoXAxypQF6QjDCJldzEzCHy/%E4%B8%AD%E7%A7%8B%E5%9B%BD%E5%BA%86banner.png" alt="北洋园PT" title="北洋园PT"></a>
+<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://lc-gluttony.s3.amazonaws.com/mOPjCqSBCs4Z/KbiFdbvkiPhV9a1N810veykpAGL7sqa7/%E5%85%83%E6%97%A6banner.png" alt="北洋园PT" title="北洋园PT"></a>
