--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://lc-gluttony.s3.amazonaws.com/mOPjCqSBCs4Z/KbiFdbvkiPhV9a1N810veykpAGL7sqa7/%E5%85%83%E6%97%A6banner.png" alt="北洋园PT" title="北洋园PT"></a>
+<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://lc-gluttony.s3.amazonaws.com/mOPjCqSBCs4Z/DN8RlW7Yfk5yq3UVwYJpGxnNaB13c1Lo/%E4%B8%87%E4%BA%8B%E5%85%B4%E9%BE%99.png" alt="北洋园PT" title="北洋园PT"></a>
 <link rel="stylesheet" href=APlayer.min.css>
     <script src=Aplayer.min.js></script>
       <div id='aplayer'></div><script>
@@ -163,4 +163,4 @@ layout: default
 		User:<span id="busuanzi_value_site_uv" style="font-family:Consolas;color:Silver;font-size:12px;"></span>
 	</span>
 </div>
-<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://lc-gluttony.s3.amazonaws.com/mOPjCqSBCs4Z/KbiFdbvkiPhV9a1N810veykpAGL7sqa7/%E5%85%83%E6%97%A6banner.png" alt="北洋园PT" title="北洋园PT"></a>
+<a href="https://www.tjupt.org/promotionlink.php?key=905e4918abb54e1ba9a5fbb2512a03c3"><img src="https://lc-gluttony.s3.amazonaws.com/mOPjCqSBCs4Z/msoJJ05qH4wmlTLLYAjLgxgncQj1hRxL/%E6%89%8D%E6%97%BA%E5%85%B4%E9%BE%99.png" alt="北洋园PT" title="北洋园PT"></a>
